# merkle_challenge

./: .rustfmt.toml  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-compose.yml  docker.yml  rust-doc.yml  rust.yml
hashtree/: CHANGELOG.md  Cargo.toml
hashtree/src/: compat.rs  lib.rs
hashtree/src/hash/: context.rs  mod.rs  proof.rs
mock/: Cargo.toml
mock/src/: main.rs  tests.rs
