[workspace]
members = ["hashtree"]
resolver = "2"

[workspace.package]
authors = ["Yoann Lambert <yoann.lambert@proton.me>"]
edition = "2021"
rust-version = "1.81"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
digest = "0.10"

# Dev-only dependencies
assert_matches = "1.5"
hex-literal = "0.4"
