[package]
name = "hashtree"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
digest_compat = ["digest"]

[dependencies]
digest = { workspace = true, optional = true }

[dev-dependencies]
assert_matches.workspace = true
hex-literal.workspace = true
md-5 = "0.10"
sha-1 = "0.10"
sha2 = "0.10"
