[package]
name = "mock"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md-5 = "0.10"

# Async handling dependencies
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

# Workspace dependencies
hashtree = { path = "../hashtree", features = ["digest_compat"] }

[dev-dependencies]
assert_matches.workspace = true
hex-literal.workspace = true
